--- a/requirements.txt
+++ b/requirements.txt
@@ -6,7 +6,10 @@ attrs==22.1.0
 backcall==0.2.0
 beautifulsoup4==4.11.1
 bleach==5.0.1
+certifi==2022.9.24
 cffi==1.15.1
+charset-normalizer==2.1.1
+click==8.1.3
 colorama==0.4.5
 contourpy==1.0.5
 cycler==0.11.0
@@ -16,6 +19,7 @@ defusedxml==0.7.1
 entrypoints==0.4
 executing==1.1.1
 fastjsonschema==2.16.2
+Flask==2.2.2
 fonttools==4.37.4
 idna==3.4
 importlib-metadata==5.0.0
@@ -23,9 +27,11 @@ ipykernel==6.16.0
 ipython==8.5.0
 ipython-genutils==0.2.0
 ipywidgets==8.0.2
+itsdangerous==2.1.2
 jedi==0.18.1
 Jinja2==3.1.2
 joblib==1.2.0
+jsonify==0.5
 jsonschema==4.16.0
 jupyter==1.0.0
 jupyter-console==6.4.4
@@ -63,11 +69,12 @@ pyparsing==3.0.9
 pyrsistent==0.18.1
 python-dateutil==2.8.2
 pytz==2022.5
-pywin32==304;platform_system == "Windows"
+pywin32==304
 pywinpty==2.0.8
 pyzmq==24.0.1
 qtconsole==5.3.2
 QtPy==2.2.1
+requests==2.28.1
 scikit-learn==1.1.2
 scipy==1.9.2
 seaborn==0.12.1
@@ -82,8 +89,10 @@ threadpoolctl==3.1.0
 tinycss2==1.2.1
 tornado==6.2
 traitlets==5.4.0
+urllib3==1.26.12
 wcwidth==0.2.5
 webencodings==0.5.1
 websocket-client==1.4.1
+Werkzeug==2.2.2
 widgetsnbextension==4.0.3
 zipp==3.9.0
